--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   color: #4e4e4e;
 }
 
@@ -178,7 +178,7 @@ a:hover {
   content: "";
   position: absolute;
   height: 3px;
-  background-color: #ff0000;
+  background-color: #000000;
   width: 100px;
   bottom: -12px;
 }
@@ -1151,7 +1151,7 @@ a:hover {
 .box-comments,
 .widget-sidebar {
   padding: 2rem;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   margin-bottom: 3rem;
 }
 @media (min-width: 768px) {
